Fix 3rd and 4th psych image were invisible

--- a/scss/sp18-dri.scss
+++ b/scss/sp18-dri.scss
@@ -378,10 +378,6 @@ input[type="checkbox"], input[type="radio"] {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-
-        &:nth-child(3), &:nth-child(4){
-            display: none;
-        }
     }
 
 
